# homophone

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/wangyu/homophone/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: generated_bindings.dart  main.dart  vnt.dart
lib/chat/: chatpage.dart  data.dart  model.dart
lib/common/: util.dart
lib/config/: config.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: lib.rs
native/vnt-cli/src/: lib.rs  main.rs
native/vnt-cli/src/command/: mod.rs
native/vnt-cli/src/console_out/: mod.rs
native/vnt-jni/src/: vnt_util.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
