#[workspace]
#members = ["vnt","common","vnt-cli","vnt-jni"]


[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
md5 = "0.7.0"
vnt-cli = { path = "./vnt-cli" }
vnt = { path = "./vnt" }
vnt-jni = { path = "./vnt-jni" }
common = { path = "./common" }
#vnt = { git = "https://github.com/lbl8603/vnt", branch = "main" }
#vnt-cli = { path = "D:\vnt-1.2.1\vnt-cli" }


[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip= "debuginfo"
overflow-checks = true
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
